--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,56 @@
 html, body {
     margin: 0;
     padding: 0;
+    background-color: #7F8C8D;
 }
 
-.info-list {
-    list-style: none;
+/*Top Section*/
+.top-section {
+    margin: 0;
+    width: 100%;
+    height: 400px;
+    background-color: white;
 }
 
-.info-list li {
-    font-weight: 800;
+/*Record Button*/
+
+.record-section {
+    margin: 0 auto;
+    width: 200px;
+    height: 200px;
+    text-align: center;
 }
 
-.info-list li > * {
-    font-weight: 200;
+.record-section-rel {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: -100px;
 }
 
-.m-btn:hover {
-    cursor: pointer;
+.record-btn-outter {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border: 5px solid black;
+}
+
+.record-btn {
+    margin: 0 auto;
+    padding: 12 0 0 0;
+    vertical-align: middle;
+    padding: 0;
+    width: 150px;
+    height: 150px;
+    background-color: #C0392B;
+    border: 5px solid black;
+}
+
+/*Widget Section*/
+
+.widget-section {
+    margin: 0;
+    width: 100%;
+    height: 700px;
+    background-color: #7F8C8D;
 }
