--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,9 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: #7F8C8D;
+    -webkit-font-smoothing: antialiased;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+
 }
 
 /*Top Section*/
@@ -16,34 +19,36 @@ html, body {
 
 .record-section {
     margin: 0 auto;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     text-align: center;
 }
 
 .record-section-rel {
     width: 100%;
     height: 100%;
+    border: 2px solid #7F8C8D;
+    border-radius: 95%;
     position: relative;
-    top: -100px;
+    top: -125px;
 }
 
 .record-btn-outter {
     width: 100%;
     height: 100%;
     background-color: white;
-    border: 5px solid black;
+    border: 3px solid #7F8C8D;
+    border-radius: 100%;
 }
 
 .record-btn {
-    margin: 0 auto;
-    padding: 12 0 0 0;
+    margin: 23.5px auto;
     vertical-align: middle;
     padding: 0;
-    width: 150px;
-    height: 150px;
+    width: 187.5px;
+    height: 187.5px;
     background-color: #C0392B;
-    border: 5px solid black;
+    border-radius: 100%;
 }
 
 /*Widget Section*/
