--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ html, body {
     width: 90%;
     height: 90%;
     background-color: #F1EFF2;
-    border: 7px solid #A38F86;
+    border: 10px solid #A38F86;
     border-radius: 100%;
 }
 
@@ -63,11 +63,11 @@ html, body {
 }
 
 .record-btn-4 {
-    margin: 12px auto;
+    margin: 20px auto;
     vertical-align: middle;
     padding: 0;
-    width: 75%;
-    height: 75%;
+    width: 60%;
+    height: 60%;
     background-color: #EB6772;
     border-radius: 100%;
 }
@@ -75,10 +75,10 @@ html, body {
 /*Widget Section*/
 
 .widget-section {
-    margin: 0;
+    margin: -250px auto;
     width: 100%;
     height: 700px;
-    background-color: #D6CFCA;
+    background-color: #F1EFF2
 }
 
 /*colors: beige:#D6CFCA red:#BE6772 light:#F1EFF2 darkbrown:#554C5A brown:#A38F86 rec-red:#EB6772 */
