--- a/css/main.css
+++ b/css/main.css
@@ -74,8 +74,14 @@ html, body {
     width: 100%;
 }
 
-.control-form {
+.instructions {
+    text-align: center;
     margin: 0 auto;
+    
+}
+
+.control-form {
+    margin: -75px auto;
     text-align: center;
     position: relative;
     top: 115px;
@@ -173,6 +179,26 @@ html, body {
     font-size: 4.5em;
 }
 
+.spinner {
+    display: none;
+    position: relative;
+    margin: 10px auto;
+    vertical-align: middle;
+    padding: 0;
+    color: #EB6772;
+    font-size: 4.5em;
+}
+
+.complete {
+    display: none;
+    position: relative;
+    margin: 10px auto;
+    vertical-align: middle;
+    padding: 0;
+    color: #EB6772;
+    font-size: 4.5em;
+}
+
 .play-btn {
     position: relative;
     top: -195px;
@@ -198,6 +224,11 @@ html, body {
     width: 100%;
     height: 700px;
     background-color: #F1EFF2
+}
+
+.widget {
+    margin: 0 auto;
+    width: 500px
 }
 
 /*colors: beige:#D6CFCA red:#BE6772 light:#F1EFF2 darkbrown:#554C5A brown:#A38F86 rec-red:#EB6772 hover-rec-red:#F25B6E */
