--- a/css/main.css
+++ b/css/main.css
@@ -65,8 +65,31 @@ html, body {
     top: 15px;
     left: 15px;
     font-family: Roboto;
-    font-size: 1.2em;
+    font-size: 1.5em;
+    color: black;
+    opacity: 0.5;
 }
+
+.help {
+    display: block;
+    position: relative;
+    top: 10px;
+    left: calc(100% - 60px);
+    width: 75px;
+    height: 75px;
+    opacity: 0.5;
+}
+
+.help:hover {
+    cursor: pointer;
+    opacity: 1;
+}
+
+.fa-question {
+    font-size: 4em;
+    color: black;
+}
+
 /*Controls*/
 
 .controls {
