--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,12 @@ html, body {
     margin: 0 auto; 
 }
 
+.soundcloud-is-slow {
+    display: none;
+    margin: 0 auto;
+    font-style: italic;
+}
+
 .control-form {
     margin: -75px auto;
     text-align: center;
@@ -268,7 +274,7 @@ html, body {
 .widget-section {
     margin: -250px auto;
     width: 100%;
-    height: 700px;
+    height: 500px;
     background-color: #F1EFF2;
     overflow: hidden;
 }
