--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,25 @@ html, body {
     text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 }
 
+body {
+    position: fixed;
+    top: 0;
+    bottom: 0px;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+}
+
 /*Top Section*/
 .top-section {
     margin: 0;
     width: 100%;
     height: 400px;
-    background-image: url("../images/record-background-red.jpg");
-    background-size: cover;
+    background-image: url("../images/bg-stripe.png");
+    background-repeat: repeat;
+    background-color: rgba(195,19,29,0.65);
+    background-blend-mode: overlay;
     font-family: Roboto;
     color: white;
 }
@@ -244,31 +256,6 @@ html, body {
     font-size: 4.5em;
 }
 
-/*
-.play-btn {
-    display: none;
-    position: relative;
-    top: -195px;
-    left: -175px;
-    font-size: 3em;
-    height: 20px;
-}
-
-.play-btn:hover {
-    opacity: 0.5;
-}
-
-.delete-btn {
-    display: none;
-    position: relative;
-    top: -195px;
-    left: 286px;
-    font-size: 3em;
-    width: 20px;
-    height: 20px;
-}
-*/
-
 /*Widget Section*/
 
 .widget-section {
@@ -277,6 +264,7 @@ html, body {
     height: 500px;
     background-color: #F1EFF2;
     overflow: hidden;
+    border: 10px solid #A38F86;
 }
 
 .widget {
