--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,9 @@ body {
 .form-text {
     display: inline-block;
     font-size: 24px;
-    padding: 6px;
+    padding: 2px 6px;
+    border: 4px solid #A38F86;
+    background-color: rgba(200,200,200,0.2);
 }
 
 .track-name {
@@ -314,6 +316,8 @@ body {
     .form-text {
         display: block;
         font-size: 18px;
+        width: 95%;
+        margin: 0 auto;
     }
     .track-name {
         display: block;
